fixed planet overflow not hidden bug on chrome

--- a/src/sass/components/_planet.scss
+++ b/src/sass/components/_planet.scss
@@ -45,6 +45,7 @@ $planet-3-rotation: 5deg;
 		opacity: 0.5;
 		border-radius: 50%;
 		overflow: hidden;
+		background-color: rgba(0,0,0,0.01);
 
 		.waves {
 			@include absolute-top-left;
